--- a/dashboard/templates/admin/change_list.html
+++ b/dashboard/templates/admin/change_list.html
@@ -46,7 +46,7 @@
 
 {% block coltype %}flex{% endblock %}
 
-{% block content %}
+{% block main %}
   <div id="content-main">
     {% block object-tools %}
       {% if has_add_permission %}
