--- a/dashboard/templates/admin/change_form.html
+++ b/dashboard/templates/admin/change_form.html
@@ -23,7 +23,7 @@
 {% endblock %}
 {% endif %}
 
-{% block content %}<div id="content-main">
+{% block main %}<div id="content-main">
 {% block object-tools %}
 {% if change %}{% if not is_popup %}
   <ul class="object-tools">
