--- a/dashboard/templates/admin/index.html
+++ b/dashboard/templates/admin/index.html
@@ -9,7 +9,7 @@
 
 {% block breadcrumbs %}{% endblock %}
 
-{% block content %}
+{% block main %}
 <div id="content-main">
 
 {% block dashboard_admin_nav %}
