--- a/dashboard/templates/500.html
+++ b/dashboard/templates/500.html
@@ -1,6 +1,6 @@
 {%  extends 'common.html' %}
 
 {%  block main %}
-  <h1>An error occurred</h1>
+  <h1 class="heading-xlarge">An error occurred</h1>
   <p>If you entered a web address please check it was correct.</p>
 {% endblock %}
