--- a/dashboard/templates/admin/lockout.html
+++ b/dashboard/templates/admin/lockout.html
@@ -1,29 +1,10 @@
-{% extends 'moj_template_custom/moj_base.html' %}
+{%  extends 'common.html' %}
 
-{% load staticfiles %}
-
-{% block page_title %}
-
-    MoJ Product Dashboard
-
+{% block blockbots %}
+<meta name="robots" content="NONE,NOARCHIVE"/>
 {% endblock %}
 
-{% block head %}
-    {% block blockbots %}
-        <meta name="robots" content="NONE,NOARCHIVE"/>
-    {% endblock %}
-
-    {% block extrahead %}
-
-        <link rel="stylesheet" type="text/css" href="{% static "admin/dashboard/styles/custom.css" %}"/>
-        <link rel="stylesheet" type="text/css" href="{% static "common/common.css" %}"/>
-
-    {% endblock %}
+{%  block main %}
+<h1 class="heading-xlarge">An error occurred</h1>
+<p>Account locked: too many login attempts. Contact an admin to unlock your account.</p>
 {% endblock %}
-
-{% block main %}
-
-    <div class="lockout-message">Account locked: too many login attempts. Contact an admin to unlock your account.</div>
-
-{% endblock %}
-
